--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ml-auto">
             <a class="nav-link active" href="#">Anasayfa<span class="sr-only">(current)</span></a>
-            <a class="nav-link" href="urunler.html">Ürünlerimiz</a>
-            <a class="nav-link" href="hakkimizda.html">Hakkımızda</a>
+            <a class="nav-link" href="product.html">Ürünlerimiz</a>
+            <a class="nav-link" href="abaout.html">Hakkımızda</a>
           </div>
         </div>
       </nav>
